--- a/reddit-dash/package.json
+++ b/reddit-dash/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^7.1.2",
     "antd": "^4.1.0",
     "moment": "^2.24.0",
+    "object-delete-key": "^1.9.20",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
